--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="header--sec">
       <div class="bg-image">
         <div class="nav-div ">
-        <nav class="navbar navbar-expand-lg navbar-dark nav-bar-dark ">
+        <nav class="navbar navbar-expand-md navbar-dark nav-bar-dark ">
           
           <p  class="navbar-brand">MEMORY POCKET</p>
           
@@ -91,8 +91,8 @@
             <h6 class="field para-1">So why are you waiting ? Lets get started</h6>
 
             <span class="text-muted para-1"
-              ><a href="#signup" class="movedown ">sign up</a> already have an
-              account
+              ><a href="#signup" class="movedown ">sign up</a> <span class="word">already have an
+              account</span>
               <a  href="#MOVE" data-toggle="modal" data-target="#exampleModalCenter"
                class="signin--navigate" href="#signin--sec">sign in</a
               ></span
