--- a/index.html
+++ b/index.html
@@ -311,25 +311,25 @@
       </div>
       </div>
        <!-- Details Dsiaplay -->
-       <div class="details hidden" id="main">
+       <div class="details " id="main">
        <div class="container detail--1" >
            <div class="necessary">
-          <!-- <div class="row "id="Details">
+           <!-- <div class="row col-sm"id="Details">
           <h1 >welcome To Memory Power </h1>
         </div>
-        <div class="row info--1">
+        <div class="row info--1 col-sm">
           <h4>Hello username, here is your saved username and credentials</h4>
 
         </div>
         <div class="wrapper">
         <div class="row user">
-         <div class="col-4 paint">
+         <div class="col-4 col-sm-8 paint">
            <h3 class="name">Username</h3>
          </div>
          <div class="col-1">
 
          </div>
-         <div class="col-4 paint">
+         <div class="col-4 col-sm-8 paint">
             <h3 class="name">Password</h3>
          </div>
         </div>
@@ -402,7 +402,7 @@
           </div>
           <div class="col-3 detail--paint left">
              <h4 class="name--detail git-user">GitHub-pass</h4>
-          </div>  -->
+          </div>   -->
           </div>
         </div> 
         </div>  
